<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <Button
        android:id="@+id/btnpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:onClick="vpote"
        android:text="@string/btn51"
        app:layout_constraintStart_toEndOf="@+id/btnmulti"
        app:layout_constraintTop_toBottomOf="@+id/btnresta" />

    <Button
        android:id="@+id/btnmulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="vmulti"
        android:text="@string/btn4p1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsuma" />

    <Button
        android:id="@+id/btnsuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:onClick="vsuma"
        android:text="@string/btn1p1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btndivicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="150dp"
        android:onClick="vdiv"
        android:text="@string/btn3p1"
        app:layout_constraintStart_toEndOf="@+id/btnresta"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnresta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:onClick="vresta"
        android:text="@string/btn2p1"
        app:layout_constraintStart_toEndOf="@+id/btnsuma"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnraiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="vraiz"
        android:text="@string/btn7p1"
        app:layout_constraintStart_toEndOf="@+id/btnn"
        app:layout_constraintTop_toBottomOf="@+id/btnpot" />

    <Button
        android:id="@+id/btnn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:onClick="vn"
        android:text="@string/btn6p1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmulti" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/t1p1"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>